--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,8 +32,11 @@
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="div">
-                        <h5>Username</h5>
-                        <input type="text" name="username" class="input" required>
+                      
+                       <h5>Email</h5>
+                       <input type="email" name="email" class="input" required>
+                       
+                    
                     </div>
                 </div>
 
