--- a/views/download.ejs
+++ b/views/download.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %> <!-- Include the header -->
 
-<!-- Link to your download.css file -->
-<link rel="stylesheet" href="/css/download.css"> <!-- Link to your download page CSS -->
+<!-- Link to  download.css file -->
+<link rel="stylesheet" href="/css/download.css"> <!-- Link to download page CSS -->
 
 <main>
   <section class="download-container">
