--- a/views/doubtForm.ejs
+++ b/views/doubtForm.ejs
@@ -22,6 +22,12 @@
     <div class="view-doubts">
       <a href="/doubt/all">View all doubts</a>
     </div>
+
+    <div class="ask-assistant">
+      <a href="/assistant">
+        <button type="button">Ask Assistant</button>
+      </a>
+    </div>
   </div>
 </body>
 </html>
