--- a/views/pyq.ejs
+++ b/views/pyq.ejs
@@ -49,7 +49,7 @@
       <div class="form-group">
         <button type="submit" id="searchButton">Search Papers</button>
         <div style="text-align: center; margin-top: 20px;">
-          <a href="/doubt/ask" class="ask-doubt-btn">Have a doubt? Ask here!</a>
+          <a href="/doubt/ask" class="ask-doubt-btn"> Ask here!</a>
         </div>
         
       </div>
