--- a/public/css/pyq.css
+++ b/public/css/pyq.css
@@ -103,12 +103,13 @@
             .ask-doubt-btn {
                 background-color: #007bff;
                 color: white;
-                padding: 1rem 1.5rem;
-                border-radius: 16px;
+                padding: 1rem 1rem;
+                border-radius: 10px;
                 text-decoration: none;
-                font-weight: 600;
+                font-weight: 700;
                 transition: background 0.3s ease;
                 margin-top: 2rem;
+                font-size: 0.5rem;
               }
               
               
