--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,4 @@
-<footer>
-    <div class="footer-content">
-        <p>© 2025 Engineering PYQ Portal. All rights reserved.</p>
-        <div class="footer-links">
-            <a href="#">About</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-        </div>
-    </div>
-</footer>
+<footer class="site-footer">
+    © 2025 All rights reserved.
+  </footer>
+  
