--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,13 @@
 <header>
-  <div class="header-content">
-      <h1 id="portalTitle">Engineering PYQ Portal</h1>
-      <p class="subtitle">Access previous year question papers for all engineering branches</p>
-  </div>
+  <nav class="navbar">
+    <div class="nav-logo">rgpv resources</div>
+    <ul class="nav-links">
+      <li><a href="/pyq">Home</a></li>
+      <li><a href="/pyq/about">About</a>
+        </li>
+      <li><a href="/pyq/contact">Contact Us</a></li>
+      <li><a href="/pyq/notes">Notes</a></li>
+      <li><a href="/pyq/playlist">Playlist</a></li>
+    </ul>
+  </nav>
 </header>
